Adjust font size and fix minor spacing issue.

--- a/styleguide/source/assets/scss/03-organisms/_main-navigation.scss
+++ b/styleguide/source/assets/scss/03-organisms/_main-navigation.scss
@@ -200,7 +200,7 @@
     display: flex;
     background: $white;
     border-bottom: none;
-    margin: 0 5px;
+    padding: 0 5px;
     height: 96px;
     min-height: 96px;
     @include breakpoint($bp-small) {
@@ -236,6 +236,7 @@
       color: $blue;
       text-decoration: none;
       padding-right: 5px;
+      font-size: 18px;
       &:hover {
         text-decoration: underline;
       }
